--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@ai-sdk/react": "^3.0.93",
     "@uiw/react-markdown-preview": "^5.1.5",
     "ai": "^6.0.91",
+    "katex": "^0.16.28",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/katex": "^0.16.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
